@@ -39,6 +39,7 @@ class MapFormulaeToC < MapValuesToC
     :'EXP' => 'excel_exp',
     :'FIND2' => 'find_2',
     :'FIND3' => 'find',
+    :'FORECAST' => 'forecast',
     :'HLOOKUP3' => 'hlookup_3',
     :'HLOOKUP4' => 'hlookup',
     :'IF2' => 'excel_if_2',
