@@ -102,3 +102,5 @@ require_relative 'excel_functions/exp'
 require_relative 'excel_functions/isblank'
 
 require_relative 'excel_functions/averageifs'
+
+require_relative 'excel_functions/forecast'
